trunk/Archive2/ea/e5e18dc875dcd7/output
main.cpp:18:5: error: redefinition of 'T Add(T, T) [with T = int]'
 int Add (int n1, int n2)
     ^
main.cpp:11:5: error: 'T Add(T, T) [with T = int]' previously declared here
 int Add<int> (int n1, int n2)
     ^
